# game-of-greed

./: .gitignore  README.md  bots.py  pyproject.toml  pytest.ini
.github/workflows/: game-of-greed.yml
D_M/: decide.py
game_of_greed/: Untitled-1.ipynb  __main__.py  banker.py  game.py  game_logic.py
tests/: flo.py  test_game_of_greed.py
tests/version_1/: test_banker.py  test_calculate_score.py  test_roll_dice.py
tests/version_2/: bank_first_for_two_rounds.sim.txt  test_sim_basic.py
tests/version_3/: cheat_and_fix.sim.txt  test_sim_advanced.py  test_validate_keepers.py
