[tool.poetry]
name = "game_of_greed"
version = "0.1.0"
description = ""
authors = ["Odeh <abuzaid163@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.9b0"
flake8 = "^4.0.1"
termcolor = "^1.1.0"
pyfiglet = "^0.8.post1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "version_1: Version 1_ Test",
    "version_2: Version 2_ Test"
]